welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:9: error: expected start of definition
	override def run() {
                 ^MethodsDogHouse:40: error: Unmatched closing brace '}' ignored here
}
^